--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
         </nav>
         <ul class="header-contact list-styles">
           <li class="header-contact-link">
-            <a class="header-mail header-link link-text" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-mail header-link link-text" href="mailto:info@devstudio.com">
+              <svg class="header-img-logo costomers-img-logo" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a>
           </li>
           <li class="header-contact-link">
-            <a class="header-tel header-link link-text" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-tel header-link link-text" href="tel:+380961111111">
+              <svg class="header-img-logo costomers-img-logo" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-tel"></use>
+              </svg>
+              +38 096 111 11 11</a>
           </li>
         </ul>
       </section>
@@ -55,22 +63,42 @@
         <h2 class="visually-hidden">Особливості</h2>
         <ul class=" features-list list-styles">
           <li class="features-item">
+            <div class="features-logo">
+              <svg class="futures-img-logo" width="65.32" height="70">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-antena"></use>
+              </svg>
+            </div>
             <h3 class="item-title">Увага до деталей</h3>
             <p class="item-text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li class="features-item">
+            <div class="features-logo">
+              <svg class="futures-img-logo" width="66.96" height="70">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-time"></use>
+              </svg>
+            </div>
             <h3 class="item-title">Пунктуальність</h3>
             <p class="item-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li class="features-item">
+            <div class="features-logo">
+              <svg class="futures-img-logo" width="70" height="53.69">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-computer"></use>
+              </svg>
+            </div>
             <h3 class="item-title">Планування</h3>
             <p class="item-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li class="features-item">
+            <div class="features-logo">
+              <svg class="futures-img-logo" width="70" height="70">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-cosmonavt"></use>
+              </svg>
+            </div>
             <h3 class="item-title">Сучасні технології</h3>
             <p class="item-text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -106,6 +134,36 @@
             <div class="team-discription">
               <h3 class="team-item-title">Ігор Дем'яненко</h3>
               <p class="team-text" lang="en">Product Designer</p>
+              <ul class="team-list-icon">
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-instagram" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-twitter" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-facebook" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-linkedin" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
@@ -113,6 +171,36 @@
             <div class="team-discription">
               <h3 class="team-item-title">Ольга Рєпіна</h3>
               <p class="team-text" lang="en">Frontend Developer</p>
+              <ul class="team-list-icon">
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-instagram" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-twitter" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-facebook" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-linkedin" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
@@ -120,6 +208,36 @@
             <div class="team-discription">
               <h3 class="team-item-title">Микола Тарасов</h3>
               <p class="team-text" lang="en">Marketing</p>
+              <ul class="team-list-icon">
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-instagram" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-twitter" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-facebook" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-linkedin" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
@@ -127,7 +245,87 @@
             <div class="team-discription">
               <h3 class="team-item-title">Михайло Єрмаков</h3>
               <p class="team-text" lang="en">UI Designer</p>
+              <ul class="team-list-icon">
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-instagram" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-twitter" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-facebook" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icon">
+                  <a href="" class="team-address-icon">
+                    <svg class="team-icon">
+                      <use href="./images/symbol-defs.svg#icon-linkedin" width="20px" height="20px"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--------------------------------------- Постійні клієнти-------------------------------->
+    <section class="customers">
+      <div class="container">
+        <h2 class="customers-title">Постійні клієнти</h2>
+        <ul class="customers-logo">
+          <li>
+            <a class="customers-link-logo" href="">
+              <svg class="costomers-img-logo" width="106" height="60">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-Logo1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="customers-link-logo" href="">
+              <svg class="costomers-img-logo" width="106" height="60">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-Logo2"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="customers-link-logo" href="">
+              <svg class="costomers-img-logo" width="106" height="60">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-Logo3"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="customers-link-logo" href="">
+              <svg class="costomers-img-logo" width="106" height="60">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-Logo4"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="customers-link-logo" href="">
+              <svg class="costomers-img-logo" width="106" height="60">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-Logo5"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="customers-link-logo" href="">
+              <svg class="costomers-img-logo" width="106" height="60">
+                <use class="color-logo" href="./images/symbol-defs.svg#icon-Logo6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -135,25 +333,60 @@
   </main>
   <!-- Підвал -->
   <footer class="footer">
-    <div class="container">
-      <a class="footer-logo link-text" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-      <address class="footer-address">
-        <ul class="footer-list list-styles link-text">
-          <li class="footer-item">
-            <a class="footer-maps header-link link-text list-styles" href=" https://goo.gl/maps/KbacDpf7Sf644kYd8"
-              target="_blank" rel="noreferrer noopener">
-              м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li class="footer-item">
-            <a class="footer-mail header-link link-text list-styles" href="mailto:info@devstudio.com"
-              rel="">info@devstudio.com</a>
-          </li>
-          <li class="footer-item">
-            <a class="footer-tel header-link link-text list-styles" href=" tel:+">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+    <div class="container footer-thumb">
+      <div class="footer-container">
+        <a class="footer-logo link-text" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+        <address class="footer-address">
+          <ul class="footer-list list-styles link-text">
+            <li class="footer-item">
+              <a class="footer-maps header-link link-text list-styles" href=" https://goo.gl/maps/KbacDpf7Sf644kYd8"
+                target="_blank" rel="noreferrer noopener">
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-mail header-link link-text list-styles" href="mailto:info@devstudio.com"
+                rel="">info@devstudio.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-tel header-link link-text list-styles" href=" tel:+">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>     
+       </div>
+        <div class="footer-container-icon">
+          <h2 class="footer-title-icon">приєднуйтесь</h2>
+          <ul class="footer-list-icon">
+            <li class="footer-link-icon">
+              <a href="" class="footer-address-icon">
+                <svg class="footer-icon" width="20" height="20">
+                  <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-link-icon">
+              <a href="" class="footer-address-icon">
+                <svg class="footer-icon" width="20" height="20">
+                  <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-link-icon">
+              <a href="" class="footer-address-icon">
+                <svg class="footer-icon" width="20" height="20">
+                  <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-link-icon">
+              <a href="" class="footer-address-icon">
+                <svg class="footer-icon" width="20" height="20">
+                  <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
     </div>
   </footer>
 </body>
