--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="modern-normalize">
     <link rel="stylesheet" href="./css/style.css" />
 </head>
+
 <body>
     <!-- Шапка -->
     <header class="header">
@@ -34,11 +35,18 @@
                 </nav>
                 <ul class="header-contact list-styles">
                     <li class="header-contact-link">
-                        <a class="header-mail header-link link-text"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="header-mail header-link link-text" href="mailto:info@devstudio.com">
+                            <svg class="header-img-logo costomers-img-logo" width="16" height="12">
+                                <use href="./images/symbol-defs.svg#icon-mail"></use>
+                            </svg>
+                            info@devstudio.com</a>
                     </li>
                     <li class="header-contact-link">
-                        <a class="header-tel header-link link-text" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="header-tel header-link link-text" href="tel:+380961111111">
+                            <svg class="header-img-logo costomers-img-logo" width="10" height="16">
+                                <use href="./images/symbol-defs.svg#icon-tel"></use>
+                            </svg>
+                            +38 096 111 11 11</a>
                     </li>
                 </ul>
             </section>
@@ -135,8 +143,8 @@
                         </div>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img9.jpg" alt="Growing Business"
-                            width="370" height="294">
+                        <img class="portfolio-images" src="./images-portfiio/img9.jpg" alt="Growing Business" width="370"
+                            height="294">
                         <div class="progect-description">
                             <h2 class="portfolio-sub-title"><span lang="en">Growing Business</span></h2>
                             <p class="portfolio-text">Додаток</p>
@@ -148,25 +156,60 @@
     </main>
     <!-- Підвал -->
     <footer class="footer">
-        <div class="container">
-            <a class="footer-logo link-text" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-            <address class="footer-address">
-                <ul class="footer-list list-styles link-text">
-                    <li class="footer-item">
-                        <a class="footer-maps header-link link-text list-styles"
-                            href=" https://goo.gl/maps/KbacDpf7Sf644kYd8" target="_blank" rel="noreferrer noopener">
-                            м. Київ, пр-т Лесі Українки, 26
+        <div class="container footer-thumb">
+            <div class="footer-container">
+                <a class="footer-logo link-text" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+                <address class="footer-address">
+                    <ul class="footer-list list-styles link-text">
+                        <li class="footer-item">
+                            <a class="footer-maps header-link link-text list-styles"
+                                href=" https://goo.gl/maps/KbacDpf7Sf644kYd8" target="_blank" rel="noreferrer noopener">
+                                м. Київ, пр-т Лесі Українки, 26
+                            </a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-mail header-link link-text list-styles" href="mailto:info@devstudio.com"
+                                rel="">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-tel header-link link-text list-styles" href=" tel:+">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-container-icon">
+                <h2 class="footer-title-icon">приєднуйтесь</h2>
+                <ul class="footer-list-icon">
+                    <li class="footer-link-icon">
+                        <a href="" class="footer-address-icon">
+                            <svg class="footer-icon" width="20" height="20">
+                                <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
                         </a>
                     </li>
-                    <li class="footer-item">
-                        <a class="footer-mail header-link link-text list-styles" href="mailto:info@devstudio.com"
-                            rel="">info@devstudio.com</a>
+                    <li class="footer-link-icon">
+                        <a href="" class="footer-address-icon">
+                            <svg class="footer-icon" width="20" height="20">
+                                <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-item">
-                        <a class="footer-tel header-link link-text list-styles" href=" tel:+">+38 096 111 11 11</a>
+                    <li class="footer-link-icon">
+                        <a href="" class="footer-address-icon">
+                            <svg class="footer-icon" width="20" height="20">
+                                <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-link-icon">
+                        <a href="" class="footer-address-icon">
+                            <svg class="footer-icon" width="20" height="20">
+                                <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
