--- a/index.html
+++ b/index.html
@@ -352,41 +352,41 @@
               <a class="footer-tel header-link link-text list-styles" href=" tel:+">+38 096 111 11 11</a>
             </li>
           </ul>
-        </address>     
-       </div>
-        <div class="footer-container-icon">
-          <h2 class="footer-title-icon">приєднуйтесь</h2>
-          <ul class="footer-list-icon">
-            <li class="footer-link-icon">
-              <a href="" class="footer-address-icon">
-                <svg class="footer-icon" width="20" height="20">
-                  <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-link-icon">
-              <a href="" class="footer-address-icon">
-                <svg class="footer-icon" width="20" height="20">
-                  <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-link-icon">
-              <a href="" class="footer-address-icon">
-                <svg class="footer-icon" width="20" height="20">
-                  <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-link-icon">
-              <a href="" class="footer-address-icon">
-                <svg class="footer-icon" width="20" height="20">
-                  <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+        </address>
+      </div>
+      <div class="footer-container-icon">
+        <p class="footer-title-icon">приєднуйтесь</p>
+        <ul class="footer-list-icon">
+          <li class="footer-link-icon">
+            <a href="" class="footer-address-icon">
+              <svg class="footer-icon" width="20" height="20">
+                <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-link-icon">
+            <a href="" class="footer-address-icon">
+              <svg class="footer-icon" width="20" height="20">
+                <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-link-icon">
+            <a href="" class="footer-address-icon">
+              <svg class="footer-icon" width="20" height="20">
+                <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-link-icon">
+            <a href="" class="footer-address-icon">
+              <svg class="footer-icon" width="20" height="20">
+                <use class="footer-color-logo" href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
