--- a/portfolio.html
+++ b/portfolio.html
@@ -76,79 +76,88 @@
                 <h1 class="visually-hidden portfolio-title">Портфоліо</h1>
                 <ul class="portfolio-list list-styles">
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img1.jpg" alt="Технокряк" width="370"
-                            height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title">Технокряк</h2>
-                            <p class="portfolio-text">Веб-сайт</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img1.jpg"
+                                alt="Технокряк" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title">Технокряк</h2>
+                                <p class="portfolio-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img2.jpg"
-                            alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title">Постер <span lang="en">New Orlean vs Golden Star</span>
-                            </h2>
-                            <p class="portfolio-text">Дизайн</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img2.jpg"
+                                alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title">Постер <span lang="en">New Orlean vs Golden Star</span>
+                                </h2>
+                                <p class="portfolio-text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img3.jpg" alt="логотип ресторану Seafood"
-                            width="370" height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title">Ресторан Seafood</h2>
-                            <p class="portfolio-text">Додаток</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img3.jpg"
+                                alt="логотип ресторану Seafood" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title">Ресторан Seafood</h2>
+                                <p class="portfolio-text">Додаток</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img4.jpg" alt="Проєкт Prime" width="370"
-                            height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title">Проєкт Prime</h2>
-                            <p class="portfolio-text">Маркетинг</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img4.jpg"
+                                alt="Проєкт Prime" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title">Проєкт Prime</h2>
+                                <p class="portfolio-text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img5.jpg" alt="Проєкт Boxes" width="370"
-                            height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title">Проєкт Boxes</h2>
-                            <p class="portfolio-text">Додаток</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img5.jpg"
+                                alt="Проєкт Boxes" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title">Проєкт Boxes</h2>
+                                <p class="portfolio-text">Додаток</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img6.jpg" alt="Inspiration has no Borders"
-                            width="370" height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title">
-                                <span lang="en">Inspiration has no Borders</span>
-                            </h2>
-                            <p class="portfolio-text">Веб-сайт</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img6.jpg"
+                                alt="Inspiration has no Borders" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title">
+                                    <span lang="en">Inspiration has no Borders</span>
+                                </h2>
+                                <p class="portfolio-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img7.jpg" alt="Видання Limited Edition"
-                            width="370" height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title">Видання <span lang="en">Limited Edition</span> </h2>
-                            <p class="portfolio-text">Дизайн</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img7.jpg"
+                                alt="Видання Limited Edition" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title">Видання <span lang="en">Limited Edition</span> </h2>
+                                <p class="portfolio-text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img8.jpg" alt="Проєкт LAB" width="370"
-                            height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title">Проєкт LAB</h2>
-                            <p class="portfolio-text">Маркетинг</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img8.jpg"
+                                alt="Проєкт LAB" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title">Проєкт LAB</h2>
+                                <p class="portfolio-text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-project">
-                        <img class="portfolio-images" src="./images-portfiio/img9.jpg" alt="Growing Business" width="370"
-                            height="294">
-                        <div class="progect-description">
-                            <h2 class="portfolio-sub-title"><span lang="en">Growing Business</span></h2>
-                            <p class="portfolio-text">Додаток</p>
-                        </div>
+                        <a class="portfolio-link" href=""><img class="portfolio-images" src="./images-portfiio/img9.jpg"
+                                alt="Growing Business" width="370" height="294">
+                            <div class="progect-description">
+                                <h2 class="portfolio-sub-title"><span lang="en">Growing Business</span></h2>
+                                <p class="portfolio-text">Додаток</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -178,7 +187,7 @@
                 </address>
             </div>
             <div class="footer-container-icon">
-                <h2 class="footer-title-icon">приєднуйтесь</h2>
+                <p class="footer-title-icon">приєднуйтесь</p>
                 <ul class="footer-list-icon">
                     <li class="footer-link-icon">
                         <a href="" class="footer-address-icon">
